# cloud-resume-challenge

./: .gitignore  API.md  README.md  openapi.yml
aws/: BUILD_AND_DEPLOY_PROCESS.md  CLOUDFRONT-SETUP.md  README.md  backend.yaml  frontend.yaml
aws/outputs/: .gitkeep  README.md
aws/playbooks/: BACKEND_DEPLOYMENT.md  BACKEND_VAULT_CONFIG.md  CLOUDFORMATION_CONFIG.md  QUICKSTART.md  README.md  ansible.cfg  backend-sam-deploy.yml  cloudfront-invalidate.yml  frontend-deploy.yml  requirements.txt  requirements.yml  s3-upload.yml  setup-cognito.yml  setup.sh
aws/playbooks/vaults/: .gitignore  README.md  config.example.yml  config.yml
backend/: .env.example  .pre-commit-config.yaml  AGENTS.md  DYNAMODB-DESIGN.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  test_dynamo_setup.py
backend/docs/: AUTHENTICATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_TESTING.md  DYNAMODB-DESIGN.md  DYNAMODB-SCAN-VS-QUERY.md  DYNAMODB_IMPLEMENTATION_SUMMARY.md  DYNAMODB_SETUP.md  LINTING.md  LINTING_SETUP_SUMMARY.md  LOCAL_TESTING.md  QUICKSTART.md  README.md  TESTING_API.md  TROUBLESHOOTING.md
backend/scripts/: create_dynamodb_table.py  seed_data.py
backend/src/: config.py  dependencies.py  main.py
backend/src/api/: analytics.py  auth.py  blog.py  certifications.py  projects.py  visitors.py
backend/src/models/: analytics.py  auth.py  blog.py  certification.py  project.py  visitor.py
backend/src/repositories/: analytics.py  base.py  blog.py  certification.py  project.py  visitor.py
backend/src/utils/: dynamodb.py  errors.py  jwt.py
backend/tests/: conftest.py
backend/tests/e2e/: test_auth_flow.py
backend/tests/integration/: test_cognito_integration.py
backend/tests/unit/: test_analytics_api.py  test_analytics_repository.py  test_auth.py  test_blog_api.py  test_blog_repository.py  test_certification_repository.py  test_certifications_api.py  test_hello.py  test_jwt.py  test_project_repository.py  test_projects_api.py  test_visitor_repository.py  test_visitors_api.py
frontend/: Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/docs/: linkedin-profile.md  linkedin-resume.md  resume.html
frontend/src/: App.tsx  index.css
frontend/src/components/: BlogEditor.tsx  BlogTab.tsx  CVTab.tsx  CertificationDetail.tsx  CertificationEditor.tsx  CertificationsTab.tsx  ContributionGraph.tsx  DashboardTab.tsx  LoginDialog.tsx  MarkdownRenderer.tsx  OverviewTab.tsx  ProfileHeader.tsx  ProjectDetail.tsx  ProjectEditor.tsx  ProjectsTab.tsx  TabNavigation.tsx  ThemeToggle.tsx  UserMenu.tsx  VisitorCounter.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: blogPosts.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: mockAnalyticsService.ts  mockAuthService.ts  mockBlogDatabase.ts  mockCertificationsDatabase.ts  mockProjectsDatabase.ts  mockVisitorService.ts
frontend/src/utils/: generateResumePDF.ts
