[project]
name = "portfolio-api"
version = "0.1.0"
description = "FastAPI-based serverless portfolio backend API with AWS Lambda, Cognito authentication, and DynamoDB"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Patrick Walukagga", email = "p.walukagga@gmail.com"}
]
dependencies = [
    "boto3>=1.42.12",
    "fastapi>=0.125.0",
    "mangum>=0.19.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "uvicorn>=0.38.0",
]
